<resources>
    <string name="app_name">Quizen</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_login">Login</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_createuser">Create User</string>
    <string name="menu_createquiz">Create Quiz</string>

    <string name="login">Login</string>
    <string name="createuser">Create User</string>
    <string name="displayquiz">Display Quiz</string>
    <string name="createquiz">Create Quiz</string>
    <string name="displaymyquiz">Display my Quizes</string>

</resources>
